# Fenix

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  fenix-planning.md  pyproject.toml
.github/workflows/: ci.yml
apps/agents/: pyproject.toml
apps/agents/src/fenix_agents/: __init__.py
apps/agents/tests/: test_agents_smoke.py
apps/api/: pyproject.toml
apps/api/src/fenix_api/: __init__.py
apps/api/tests/: test_api_smoke.py
apps/ingestion/: pyproject.toml
apps/ingestion/src/fenix_ingestion/: __init__.py  __main__.py  chunker.py  parser.py  pipeline.py
apps/ingestion/tests/: test_chunker.py  test_ingestion_smoke.py  test_parser.py
apps/mcp_server/: pyproject.toml
apps/mcp_server/src/fenix_mcp/: __init__.py
apps/mcp_server/tests/: test_mcp_smoke.py
corpus/: README.md
corpus/postmortems/: pm-2026-01-nginx-config.md  pm-2026-02-pool-conexiones.md  pm-2026-03-cert-expiry.md  pm-2026-03-disco-lleno.md  pm-2026-04-deploy-regression.md  pm-2026-04-redis-eviction.md  pm-2026-05-redis-down.md  pm-2026-05-slow-query.md  pm-2026-06-dns-outage.md
corpus/runbooks/: rb-001-nginx-502.md  rb-002-postgres-pool-agotado.md  rb-003-redis-oom.md  rb-004-disco-lleno.md  rb-005-nginx-config-rota.md  rb-006-certificado-tls-caducado.md  rb-007-dns-interno.md  rb-008-webapp-oom.md  rb-009-postgres-consulta-lenta.md  rb-010-redis-eviction-policy.md  rb-011-nginx-rate-limit.md  rb-012-nginx-upstream-timeout.md  rb-013-webapp-deploy-fallido.md  rb-014-webapp-5xx-deploy.md  rb-015-postgres-deadlock.md  rb-016-postgres-replication-lag.md  rb-017-redis-connection-refused.md  rb-018-redis-latency.md  rb-019-cpu-saturation.md  rb-020-healthcheck-flapping.md  rb-021-tls-handshake.md  rb-022-disk-inodes.md
corpus/tickets/: tk-0042-web-lenta.md  tk-0057-504-gateway-timeout.md  tk-0061-502-intermitente.md  tk-0063-no-carga-imagenes.md  tk-0064-login-lento.md  tk-0066-report-504.md  tk-0067-sesion-caida.md  tk-0068-https-warning.md  tk-0069-error-guardar.md  tk-0071-pedidos-duplicados.md  tk-0072-emails-no-llegan.md  tk-0073-no-puedo-entrar.md  tk-0074-busqueda-lenta.md  tk-0076-checkout-falla.md  tk-0077-panel-no-actualiza.md  tk-0078-app-se-reinicia.md  tk-0079-intermitente-tarde.md  tk-0081-falla-conexion.md  tk-0082-pagina-blanca.md
demo-env/: README.md
deploy/compose/: docker-compose.yml  gpu.override.yml
deploy/compose/initdb/: 01-extensions.sql
docs/: evals.md
docs/adr/: 000-alcance-y-principios.md  001-pgvector-fts-vs-qdrant.md  009-device-embeddings-reranker.md  template.md
evals/: README.md  run_chunking_experiment.py  run_retrieval.py
evals/golden/retrieval/: cases.yaml
ops/: README.md
