[project]
name = "fenix-ingestion"
version = "0.1.0"
description = "Pipeline de ingesta: parse -> chunk -> embed -> upsert (F1)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fenix_ingestion"]
