[project]
name = "fenix-mcp"
version = "0.1.0"
description = "Servidor MCP fenix-diagnostics (FastMCP, streamable HTTP) (F3)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fenix_mcp"]
